# signalmap

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/superpowers/specs/: 2026-06-30-fan-real-discovery-design.md
examples/: README.md  fetch_cwru.py
firmware/: Cargo.toml
firmware/src/: main.rs
infra/: mosquitto.conf
schema/: frame.md
sensors/: mic_capture.py
signalmap/: __init__.py  api.py  benchmark.py  cli.py  core.py  coupling.py  detector.py  discover.py  dsp.py  embed.py  frame.py  ingest.py  ingestor.py  model.py  models.py  monitor.py  simulate.py  simulate_universal.py  sinks.py  sources.py  store.py  synth.py  synth_multimodal.py  train.py  transforms.py  visualize.py
signalmap/tests/: test_pipeline.py
