[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signalmap"
version = "0.1.0"
description = "Open, sensor-agnostic platform: stream raw signals from any (even salvaged) sensor, embed them unsupervised, explore the latent landscape for unknown patterns."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "SignalMap contributors" }]
keywords = ["tinyml", "iot", "unsupervised", "anomaly-detection", "edge-ai", "sensors", "signal-processing"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Hardware",
]
dependencies = ["numpy>=1.26", "torch>=2.2"]

[project.optional-dependencies]
sensors = ["sounddevice>=0.4", "pyarrow>=15.0", "paho-mqtt>=2.0"]
ingest = ["aiomqtt>=2.0", "pyarrow>=15.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
store = ["qdrant-client>=1.9"]
viz = ["umap-learn>=0.5", "hdbscan>=0.8"]
dev = ["pytest>=8.0"]
all = ["sounddevice>=0.4", "pyarrow>=15.0", "paho-mqtt>=2.0", "aiomqtt>=2.0",
       "fastapi>=0.110", "uvicorn>=0.29", "qdrant-client>=1.9", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MrPredic/signalmap"
Documentation = "https://github.com/MrPredic/signalmap/blob/main/docs/ARCHITECTURE.md"

[project.scripts]
signalmap = "signalmap.cli:main"

[tool.setuptools]
packages = ["signalmap", "sensors"]

[tool.pytest.ini_options]
testpaths = ["signalmap/tests"]
