[package]
name = "signalmap-firmware"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SignalMap edge firmware: raw ADC streaming over MQTT (ESP32-S3, no_std)"

[dependencies]
esp-hal              = { version = "0.23", features = ["esp32s3"] }
esp-hal-embassy      = { version = "0.6", features = ["esp32s3"] }
esp-wifi             = { version = "0.12", features = ["esp32s3", "wifi"] }
esp-backtrace        = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println          = { version = "0.13", features = ["esp32s3"] }
embassy-executor     = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-time         = "0.4"
embassy-net          = { version = "0.6", features = ["tcp", "dhcpv4", "medium-ethernet"] }
rust-mqtt            = { version = "0.3", default-features = false }
heapless             = "0.8"
static_cell          = "2.1"
# Optional edge-FFT for the parallel spectrum path (allocation-free, no_std):
microfft             = "0.6"

[profile.release]
opt-level = 3
lto       = true
